# gsheet

./: .clasp.json  .claspignore  .gitignore  .pre-commit-config.yaml  Code.gs  Dockerfile.dev  Dockerfile.prod  LegalSSCodeLib.gs  LegalSSv0.9.5.gs  LegalSpreadsheet.js  LegalSpreadsheet.ts  README.md  main.html  package-lock.json  package.json
natural4-server/: Dockerfile.dev  Dockerfile.dsl-ci  Dockerfile.prod  README.md  README.org  architecture.dot  cclaw.legalese.com.nginx.conf  compose.yaml  pyproject.toml  requirements.txt
natural4-server/Docker/: .env  .env.prod  compose.prod.yaml  compose.yaml  env.local  l4web.service
natural4-server/Docker/nginx/: Dockerfile  docker.nginx.conf
natural4-server/Docker/sanic/: Dockerfile
natural4-server/Docker/webapi-ci/: Dockerfile
natural4-server/natural4_server/: README.org  access_log  cgi.sh  fastapi.py  gunicorn.8010.py  gunicorn.8080.py  gunicorn.8090.py  gunicorn.8300.py  gunicorn.conf.py  gunicorn.joe.py  hello.py  hypercorn.joe.py  joe.env  nginx-lb.md  nginx-proxy.md  pyproject.toml  requirements.txt  sanic.8090.py  sanic.docker.py  sanic.joe.py  sanic.mengwong.8080.py  sanic.proxy-443.mengwong.py  sanic.proxy-443.py  task.py  test-scasp.pl  test_maude.py
natural4-server/natural4_server/flowchart/: flowchart_dot_to_outputs.py
natural4-server/natural4_server/natural4_maude/: analyse_state_space.py  visualise.py
natural4-server/natural4_server/natural4_maude/examples/: loan-agreement.natural4
natural4-server/natural4_server/plugins/docgen/: __init__.py  pandoc_md_to_outputs.py
natural4-server/natural4_server/plugins/flowchart/: __init__.py  flowchart_dot_to_outputs.py
natural4-server/natural4_server/plugins/logical_english/: __init__.py  le.qlf  query_le.py
natural4-server/natural4_server/plugins/natural4_maude/: __init__.py  analyse_state_space.py  main.maude  visualise.py
natural4-server/natural4_server/plugins/v8k/: __init__.py  __init__.py.old  __init__.py.old0
natural4-server/natural4_server/plugins/v8k_wrapper/: __init__.py
natural4-server/natural4_server/plugins/word_and_pdf/: __init__.py  pandoc_md_to_outputs.py  pandoc_md_to_word_and_pdf.py
natural4-server/natural4_server/static/: Borrower-anyall.hs  Borrower-qjson.json  Borrower-qtree.hs
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/: 20230606T064958.639896Z.csv  20230606T064958.639896Z.out  v8k.out
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/aasvg/: LATEST
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/corel4/: 2023-06-06T06:49:58.706Z.l4  LATEST.l4
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/dmn/: LATEST.dmn
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/epilog/: LATEST.lp
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/gftrees/: 2023-06-06T06:49:58.706Z.gftrees  LATEST.gftrees
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/grounds/: 2023-06-06T06:49:58.706Z.txt  LATEST.txt
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/json/: 2023-06-06T06:49:58.706Z.json  LATEST.json
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/maude/: LATEST.natural4
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/md/: 2023-06-06T06:49:59.393Z.md  LATEST.md
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/1411370405/native/: 2023-06-06T06:49:58.706Z.hs  LATEST.hs
natural4-server/natural4_server/temp/workdir/00c5f231-8844-4f15-8723-20b6f5bd0aa3/1Wgt73WV8vU9Ap4xTLLPZMvNKz1Q_SV_v7YeXYtaX7nY/237516042/: 20230606T064928.379199Z.out  20230606T072232.783673Z.csv  v8k.out
natural4-server/natural4_server/template/: aasvg.html  corel4.html
natural4-server/tests/: conftest.py  pupu.py  test_endpoint.py  test_maude.py
pyrest/: README.org  architecture.dot  commands.txt  gunicorn.8010.py  gunicorn.8080.py  gunicorn.8081.py  gunicorn.8090.py  gunicorn.conf.py  gunicorn.maude.py  hello.py  pyproject.toml  requirements.txt  test.csv  vpyrest.sh
pyrest/maude/: main.maude  visualise.py
pyrest/natural4_maude/: analyse_state_space.py  main.maude  visualise.py
pyrest/template/: aasvg_index.html  json.html  petri.html
(+82 files in other folders)
