[tool.poetry]
name = "natural4-server"
version = "0.1.0"
description = ""
authors = ["CCLAW"]
readme = "README.org"
packages = [{include = "natural4_server"}]

[tool.poetry.dependencies]
python = "^3.11.0"
orjson = "^3.9.1"
quart = "^0.18.4"
gunicorn = "^20.1.0"
uvicorn = "^0.22.0"
aiofile = "^3.8.7"
aioshutil = "^1.3"
aiostream = "^0.4.5"
cytoolz = "^0.12.1"
pyrsistent = "^0.19.3"
pyrsistent-extras = "^0.1.0"
pyvis = {version = "^0.3.2", optional = true}
maude = {version = "^1.2.2", optional = true}
umaudemc = {version = "^0.12.1", optional = true}
networkx = {version = "^3.0", optional = true}
pypandoc_binary = {version = "^1.11", optional = true}
pygraphviz = {version = "^1.11", optional = true}

[tool.poetry.dev-dependencies]
ipdb = "*"

[tool.poetry.extras]
natural4-maude = ["maude", "umaudemc", "pyvis", "networkx"]
docgen = ["pypandoc_binary"]
flowchart = ["pygraphviz"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130
target-version = "py311"

ignore = ["E731", "E701"] 
# E731: we are FPers, assigning lambdas is OK
# E701: sometimes it looks better to have multiple statements after colon

[tool.ruff.per-file-ignores] 
"natural4_server/natural4_maude/*.py" = ["F403", "E701", "F405"]
# Ruff doesn't like the from module import * pattern