[tool.poetry]
name = "pyrest"
version = "0.1.0"
description = ""
authors = ["cclaw"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cytoolz = "0.12.1"
flask = "2.2.3"
maude = "1.2.2"
networkx = "3.0"
pyrsistent = "0.19.3"
pyvis = "0.3.2"
umaudemc = "0.12.1"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
